--- a/pages/index.html
+++ b/pages/index.html
@@ -14,6 +14,9 @@
         'opsz' 24
       }
       </style>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Lato&display=swap" rel="stylesheet">
     <title>index</title>
   </head>
   <body>
